--- a/css/main_css.css
+++ b/css/main_css.css
@@ -683,7 +683,7 @@ a {
     border-radius: 10px;
     margin-top: 50px;
     color: #ffffff;
-    background-image: url("background_image.jpg");
+    background-image: url("../pictures/background_image.jpg");
     background-size: 100%;
 }
 
@@ -756,7 +756,7 @@ a {
 
 .empty_block {
     width: 650px;
-    background-image: url("girl_blue_block.webp");
+    background-image: url("../pictures/girl_blue_block.webp");
     background-size: 100% 100%;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
